welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
while (estFaceMur==false){
while(estSurBiscuit==false){
	avance();
}

while(estSurBiscuit==true){
	prendBiscuit()
	droite();droite();avance();avance();avance();avance();avance();
	poseBiscuit();
	droite();droite();
	if(estFaceMur==true){
	droite();avance();gauche();else();
	}else{
		avance();
	
}
}